--- a/src/app/employees/view-all-emp/view-all-emp.component.html
+++ b/src/app/employees/view-all-emp/view-all-emp.component.html
@@ -1,1 +1,54 @@
-<p>view-all-emp works!</p>
+
+<div class="container-fluid g-0">
+    <div class="row"> 
+      <div class="col-lg-12">
+        <main>
+          <div class="employees">
+            <div >
+               <div class="card" style="width: 1200px;">
+                <div class="card-header">
+                  <div class="toolbar">
+                    <div class="Add-employees">
+                      <button type="button" class="btn btn-success ">Add New[+]</button>
+                    </div>
+                    <a class="navbar-brand mx-auto" href="#">Manage Employee</a>
+                </div>
+                </div>
+                <div class="card-body">
+                    <table datatable  class=" table table-bordered">
+                      <thead  id="header">
+                        <tr>
+                          <td>FName</td>
+                          <td>Lname</td>
+                          <td>Email</td>
+                          <td>Phone</td>
+                          <td>sex</td>
+                          <td>DOB</td>
+                          <td>company</td>
+                          <td>Department</td>
+                          <td>Expirience</td>
+                          <td>Education</td>
+                          <td>salary</td>
+                          <td>Document</td>
+                          <td>Action</td>
+                          <td>Role</td>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr >
+                          <td>hduuahs</td>
+                          <td>sadbjh</td>
+                          <td>kjadhfk</td>
+                          <td>hjsgd</td>
+                        </tr>
+                      </tbody>
+
+                    </table>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+  </div>
