--- a/src/app/site-framwork/footer/footer.component.html
+++ b/src/app/site-framwork/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="py-5 bg-dark">
+<footer class="py-3 bg-dark ">
     <div class="container">
-        <p class="m-0 text-center text-white">copyright &copy; Simple_HR_sytem</p>
+        <p class="m-0 text-center text-white">copyright &copy; Simple_HR_sytem 2023</p>
     </div>
 </footer>
