--- a/src/app/site-framwork/header/header.component.html
+++ b/src/app/site-framwork/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-dark bg-dark h-100">
+<nav class="py-3 navbar navbar-custom h-100">
 <div class="container-fluid">
 <a class="navbar-brand mx-auto" href="#">Simple Human Resource Managment System</a>
 </div>
