--- a/src/app/site-framwork/sidebar/sidebar.component.html
+++ b/src/app/site-framwork/sidebar/sidebar.component.html
@@ -1,1 +1,23 @@
-<p>Side Bar</p>
+
+<div class="main-container d-flex">
+    <div class="sidebar" id="side-nav">
+        <div class="header-box px-2 pt-2 pb-2">
+            <h2 class="fs-4"><span class="bg-white text-dark rounded shadow px-2 me-2">HR</span><span class="text-white">System</span></h2>
+            <button class="btn d-md-none d-block close-btn px-1 py-0 text-white"><i class="fal fa-stream"></i></button>
+        </div>
+        <ul class="list-unstyled px-3">
+            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Dashboard</a></li>
+            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Manage Company</a></li>
+            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Check Candidates</a></li>
+            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Departments</a></li>
+            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Employees</a></li>
+            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Mange Salary</a></li>
+        </ul>
+    </div>
+</div>
+<script>
+    $(".sidebar ul li").on('click' , function(){
+     $(".sidebar ul li.active").removeClass('active');
+     this.addclass('active');
+    })
+</script>
