--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
+body { padding-top: 05; background-color:rgb(194, 191, 191);}
+.menu_btn{
+    position: absolute;
+     color: black;
+     font-size: 20px;
+     margin: 15px;
+     top: 0;
+     margin-top: 140px;
+     cursor: pointer;  
+ }
+ .side_bar.active{
+     left: 0;
+ }
+ 
+html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
