this is new yared

--- a/src/app/company/getall-company/getall-company.component.html
+++ b/src/app/company/getall-company/getall-company.component.html
@@ -5,17 +5,23 @@
         <main>
           <div class="employees">
             <div >
-               <div class="card" style="width: 1200px;">
+               <div class="card" >
                 <div class="card-header">
                   <div class="toolbar">
                     <div class="Add-employees">
-                      <button type="button" class="btn btn-success ">Add New[+]</button>
+                       <a href="create-company" class="btn btn-success ">Add New[+]</a>
                     </div>
-                    <a class="navbar-brand mx-auto" href="#">Manage Employee</a>
+                    <div>
+                      <a class="navbar-brand mx-auto" href="#">Manage Company</a>
+                    </div>
+                    <div>
+                      <input class="form-control" type="search" placeholder="search company..." />
+                    </div>
                 </div>
                 </div>
-                <div class="card-body">
-                    <table datatable  class=" table table-bordered">
+                <div class="card-body table-responsive">
+                  
+                    <table datatable  class="table-hover minimized table table-striped table table-bordered">
                       <thead  id="header">
                         <tr>
                           <th>Company Name</th>
@@ -24,10 +30,14 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr *ngFor="let company of CompanyList$ | async">
+                        <tr *ngFor="let company of CompanyList">
                           <td>{{company.Cname}}</td>
                           <td>{{company.Description}}</td>
-                          <td></td>
+                          <td>
+                           <a  href="update-company/{{company.id}}" ><i  class="fa fa-edit" style="padding-right: 20px; color: green;"></i></a>
+                            <i class="fa fa-trash-o" style="color: red;" (click)="delete(company.id)"></i>
+
+                          </td>
                         </tr>
                       </tbody>
 
