--- a/src/app/company/update-company/update-company.component.html
+++ b/src/app/company/update-company/update-company.component.html
@@ -1,1 +1,31 @@
-<p>update-company works!</p>
+<div class="container-fluid g-0">
+    <div class="row"> 
+      <div class="col-lg-12">
+        
+        <main>
+          
+          <div class="employees">
+            <div class="row mt-5">
+                <form class="row g-3" >
+                    <h1><a  id ="cret" class="navbar-brand mx-auto">Update Company</a></h1>
+                    <div class="col-md-9">
+                        <label id="lab" for="validationDefault02" class="form-label ">Enter Company Name</label>
+                      <input type="text" class="form-control" id="validationDefault01" name="company_name" {[ngModel]}="companyList." placeholder="Input Name" required>
+                    </div>
+                    <div class="col-md-9">
+                      <label id ="lab" for="validationDefault02" class="form-label">Description</label>
+                      <input type="text" class="form-control" id="validationDefault02" name="company_description" ngModel placeholder="Enter Description..." required>
+                    </div>
+                    <div class="col-4">
+                      <div class="form-group text-center">
+                      <button class="btn btn-primary " type="submit">{{btntxt}}</button>
+                      <button class="btn btn-danger " type="button" (click)="oncancel()">cancel</button>
+                    </div>
+                    </div>
+                  </form>
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+  </div>
