--- a/src/app/employees/create-employee/create-employee.component.html
+++ b/src/app/employees/create-employee/create-employee.component.html
@@ -7,56 +7,63 @@
           
           <div class="employees">
             <div class="row mt-5">
-                <form class="row g-3">
+                <form class="row g-3" (submit)="AddnewEmployee(addcompanyform)" #addcompanyform="ngForm">
                     <div class="col-md-6">
                       <label for="validationDefault01" class="form-label">First name</label>
-                      <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+                      <input type="text" class="form-control" id="validationDefault01" name="emp_fname" ngModel placeholder="Input First Name" required>
                     </div>
                     <div class="col-md-6">
                       <label for="validationDefault02" class="form-label">Last name</label>
-                      <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
+                      <input type="text" class="form-control" id="validationDefault02" name="emp_lname" ngModel placeholder="Input Last Name" required>
                     </div>
                     <div class="col-md-6">
                         <label for="validationDefault02" class="form-label">Gender</label>
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
-                            <label class="form-check-label" for="flexRadioDefault1">
-                              Male
+                            
+                            <label class="radio-inline">
+                              <input class="form-check-input" type="radio"  name="gender" ngModel  id="flexRadioDefault1" checked> Male
                             </label>
                           </div>
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                            <label class="form-check-label" for="flexRadioDefault2">
-                              Female
+                            
+                            <label class="radio-inline" >
+                              <input class="form-check-input" type="radio" name="gender" ngModel id="flexRadioDefault2"> Female
                             </label>
                           </div>
+                    </div>
+                    <div class="col-md-6">
+                      <label for="validationDefault02" class="form-label">Email</label>
+                      <input type="text" class="form-control" id="validationDefault02" name="email" ngModel placeholder="Input Last Name" required>
                     </div>
                     <div class="col-md-6">
                       <label for="validationDefaultUsername" class="form-label">Username</label>
                       <div class="input-group">
                         <span class="input-group-text" id="inputGroupPrepend2">@</span>
-                        <input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2" required>
+                        <input type="text" class="form-control" id="validationDefaultUsername" name="uname" ngModel placeholder="Input User Name"  aria-describedby="inputGroupPrepend2" required>
                       </div>
                     </div>
-                    <div class="col-md-6">
-                      <label for="validationDefault03" class="form-label">City</label>
-                      <input type="text" class="form-control" id="validationDefault03" required>
-                    </div>
-                    <div class="col-md-6">
-                      <label for="validationDefault04" class="form-label">State</label>
-                      <select class="form-select" id="validationDefault04" required>
-                        <option selected disabled value="">Choose...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <div class="col-md-3">
+                      <label for="validationDefault04" class="form-label">company</label>
+                      <select class="form-select" name="cname" ngModel id="validationDefault04" required>
+                        <option selected disabled value="">Choose company here</option>
+                        <option value="1">XOKA</option>
+                        <option value="2">CNET</option>
+                        <option value="3">Ethsiwtch</option>
+                        <option value="3">Redcloud</option>
+
                       </select>
                     </div>
-                    <div class="col-md-6">
-                      <label for="validationDefault05" class="form-label">Zip</label>
-                      <input type="text" class="form-control" id="validationDefault05" required>
+                    <div class="col-md-3">
+                      <label for="validationDefault04" class="form-label">Role</label>
+                      <select class="form-select" name="role" ngModel id="validationDefault04" required>
+                        <option selected disabled value="">Choose Role here</option>
+                        <option value="1">admin</option>
+                        <option value="2">employee</option>
+                        <option value="3">manager</option>
+                      </select>
                     </div>
                     <div class="col-4">
-                      <button class="btn btn-primary" type="submit">Submit form</button>
+                      <button class="btn btn-primary btn-sm" type="submit">Submit</button>
                     </div>
                   </form>
             </div>
