--- a/src/app/employees/update-employee/update-employee.component.html
+++ b/src/app/employees/update-employee/update-employee.component.html
@@ -1,3 +1,71 @@
 <p>update-employee works!</p>
-
+<div class="container-fluid g-0">
+    <div id="hed"><app-header-emp></app-header-emp></div>
+    <div class="row"> 
+      <div class="col-lg-12">
+        
+        <main>
+          
+          <div class="employees">
+            <div class="row mt-5">
+                <form class="row g-3">
+                    <div class="col-md-6">
+                      <label for="validationDefault01" class="form-label">First name</label>
+                      <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+                    </div>
+                    <div class="col-md-6">
+                      <label for="validationDefault02" class="form-label">Last name</label>
+                      <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="validationDefault02" class="form-label">Gender</label>
+                          <div class="form-check">
+                            
+                            <label class="radio-inline">
+                              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked> Male
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            
+                            <label class="radio-inline" >
+                              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"> Female
+                            </label>
+                          </div>
+                    </div>
+                    <div class="col-md-6">
+                      <label for="validationDefaultUsername" class="form-label">Username</label>
+                      <div class="input-group">
+                        <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                        <input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2" required>
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <label for="validationDefault04" class="form-label">company</label>
+                      <select class="form-select" id="validationDefault04" required>
+                        <option selected disabled value="">Choose company here</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                      </select>
+                    </div>
+                    <div class="col-md-3">
+                      <label for="validationDefault04" class="form-label">Departiment</label>
+                      <select class="form-select" id="validationDefault04" required>
+                        <option selected disabled value="">Choose department here</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                      </select>
+                    </div>
+                    <div class="col-4">
+                        <button class="btn btn-primary " type="submit">submit</button>
+                        <button class="btn btn-danger " type="button" (click)="oncancel()">cancel</button>
+                    </div>
+                  </form>
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+  </div>
 <h1>id:{{empId}}</h1>
