--- a/src/app/site-framwork/sidebar/sidebar.component.html
+++ b/src/app/site-framwork/sidebar/sidebar.component.html
@@ -7,10 +7,10 @@
         </div>
         <ul class="list-unstyled px-3">
             <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Dashboard</a></li>
-            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Manage Company</a></li>
+            <li class=""><a href="company" routerLinkActive="router-link-active"  class="text-decoration-none px-3 py-2 d-block">Manage Company</a></li>
             <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Check Candidates</a></li>
             <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Departments</a></li>
-            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Employees</a></li>
+            <li class=""><a href="employees" class="text-decoration-none px-3 py-2 d-block">Employees</a></li>
             <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Mange Salary</a></li>
         </ul>
     </div>
